bg-color navbar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-                <a class="navbar-brand" href="#">HupLib</a>
+                <a class="navbar-brand" href="#"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<b>HupLib.com</b></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,7 +47,7 @@
                     <li class="visible-xs">
                         <form action="http://bootsnipp.com/search" method="GET" role="search">
                             <div class="input-group">
-                                <input type="text" class="form-control" name="q" placeholder="Search for snippets">
+                                <input type="text" class="form-control" name="q" placeholder="Tìm kiếm">
                                 <span class="input-group-btn">
 									<button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-search"></span></button>
                                 <button class="btn btn-danger" type="reset"><span class="glyphicon glyphicon-remove"></span></button>
