--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 </head>
 
 <body style="font-family: 'Source Sans Pro', sans-serif;">
+    <div class="container">
+        <nav class="navbar navbar-default" role="navigation">
+            <!-- Brand and toggle get grouped for better mobile display -->
 
-    <nav class="navbar navbar-default" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -72,8 +72,21 @@
                     </div>
                 </form>
             </div>
+
+        </nav>
+
+
+
+        <div class="jumbotron header-jumbotron">
+            <div class="container">
+                <p class="text-center text-primary" style="font-size: 40px"><b>Thư viện tài liệu Dược học</b></p>
+                <p class="text-center">
+                    <a class="btn btn-success btn-lg" style="font-size: 18px"><i class="fa fa-cloud-upload" aria-hidden="true"></i><b> Chia sẻ ngay</b></a>
+                </p>
+            </div>
         </div>
-    </nav>
+
+    </div>
 
 
     <!--Modal-->
@@ -162,6 +175,8 @@
 
     </div>
     <!--end modal-->
+
+
 
 
 
