--- a/index.html
+++ b/index.html
@@ -80,9 +80,14 @@
         <div class="jumbotron header-jumbotron">
             <div class="container">
                 <p class="text-center text-primary" style="font-size: 40px"><b>Thư viện tài liệu Dược học</b></p>
-                <p class="text-center">
-                    <a class="btn btn-success btn-lg" style="font-size: 18px"><i class="fa fa-cloud-upload" aria-hidden="true"></i><b> Chia sẻ ngay</b></a>
-                </p>
+                <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <a class="btn btn-success btn-lg pull-right" style="font-size: 18px"><i class="fa fa-cloud-upload" aria-hidden="true"></i><b> Chia sẻ ngay</b></a>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <a class="btn btn-danger btn-lg pull-left" style="font-size: 18px"><i class="fa fa-lightbulb-o" aria-hidden="true"></i><b> Hướng dẫn</b></a>
+                    </div>
+                </div>
             </div>
         </div>
 
